--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">Newstopia</string>
-    <string name="title_activity_main">Newstopia</string>
+    <string name="app_name">Cryptonia</string>
+    <string name="title_activity_main">Cryptonia</string>
     <string name="package_name">com.cryptonia.org</string>
     <string name="custom_url_scheme">com.cryptonia.org</string>
     <string name="admob_app_id">ca-app-pub-9055433483734847~3264373182</string>
